--- a/.github/workflows/update-news.yml
+++ b/.github/workflows/update-news.yml
@@ -14,7 +14,7 @@ jobs:
           python-version: '3.10' # Senin Python sürümün
       - name: Install dependencies
         run: pip install feedparser beautifulsoup4 requests lxml ssl os json
-      - name: Run scripts
+      - name: Run 
         run: python aa_news.py # Python script’inin adını güncelle
         run: python science.py 
         run: python ensonhaber.py
@@ -24,5 +24,5 @@ jobs:
     - name: Deploy to Netlify
         run: npm install -g netlify-cli && netlify deploy --prod --dir dist
         env:
-          NETLIFY_AUTH_TOKEN: ${{ nfp_Pk5FyKQoumYwoFxx4NqrpPBtRQCzaqcD1c7d }}
-          NETLIFY_SITE_ID: ${{ 93a1e8ea-488c-475f-a35e-0ec96afb8f96 }}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
