--- a/.github/workflows/update-news.yml
+++ b/.github/workflows/update-news.yml
@@ -14,13 +14,15 @@ jobs:
           python-version: '3.10' # Senin Python sürümün
       - name: Install dependencies
         run: pip install feedparser beautifulsoup4 requests lxml ssl os json
-      - name: Run script
-        run: python aa_news.py # Python script’inin adını güncelle
+      - name: Run aa_news
+        run: python aa_news.py 
+      - name: Run science
         run: python science.py 
-        run: python ensonhaber.py
-        run: python news.py 
+      - name: Run ensonhaber
+        run: python ensonhaber.py 
+      - name: Run news      
+        run: python news.py
       
-
       - name: Deploy to Netlify
         run: npm install -g netlify-cli && netlify deploy --prod --dir dist
         env:
