--- a/.github/workflows/update-news.yml
+++ b/.github/workflows/update-news.yml
@@ -33,9 +33,9 @@ jobs:
       - name: Build
         run: npm run build
       - name: Install Netlify CLI
-        run: npm install -g netlify-cli
+        run: npm install -g netlify-cli@latest # En son sürümü yükle
       - name: Deploy to Netlify
-        run: netlify deploy --prod --dir dist --skip-build # Netlify'nin build adımını atla
+        run: netlify deploy --prod --dir dist --skip-build # Tekrar dene
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
